@@ -929,7 +929,7 @@ main(int argc, char **argv)
 #if (use_partial_on_noforce == TRUE)
 				} else if (matchpath(zip_dirs, g.l.path) && !fileexists(g.l.sfv) && !matchpartialpath(noforce_sfv_first_dirs, g.l.path)) {
 #else
-				} else if (matchpath(zip_dirs, g.l.path) && !fileexists(g.l.sfv)) {
+				} else if (matchpath(zip_dirs, g.l.path) && !fileexists(g.l.sfv) && !matchpath(noforce_sfv_first_dirs, g.l.path)) {
 #endif
 					d_log("zipscript-c: This looks like a file uploaded the wrong place - Not allowing it.\n");
 					strlcpy(g.v.misc.error_msg, SFV_FIRST, 80);
